--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -172,6 +172,8 @@ genre.all=All
 search.advanced=Advanced search
 wrong.password = You enter wrong password.
 password.success = You password updated succesfully.
+typeMismatch.book.year = Wrong input.
+typeMismatch.book.pages = Wrong input.
 
 sort.froma = from A to Z
 sort.fromz = from Z to A
