--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -162,6 +162,8 @@ genre.all=Все
 search.advanced=Расширенный поиск
 wrong.password = Вы ввели неверный пароль. Попробуйте еще раз.
 password.success = Процесс смены пароля прошел успешно.
+typeMismatch.book.year = Некорректно заполнено поле.
+typeMismatch.book.pages = Некорректно заполнено поле.
 
 sort.froma = от А до Я
 sort.fromz = от Я до А
