--- a/src/main/resources/messages_uk.properties
+++ b/src/main/resources/messages_uk.properties
@@ -161,6 +161,8 @@ genre.all=Всі
 search.advanced=Розширений пошук
 wrong.password = Ви ввели невірний пароль. Спробуйте ще раз.
 password.success = Процес зміни пароля успішно завершений.
+typeMismatch.book.year = Некоректно заповнено поле.
+typeMismatch.book.pages = Некоректно заповнено поле.
 
 sort.froma = від А до Я
 sort.fromz = від Я до А
