began fix orders

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -117,6 +117,7 @@ message.confirm.registration=Thank you for joining our JLibrary. Please confirm 
 message.restore.pass = Change your password by clicking on next link: 
 message.chEmail = On this page you can change the e-mail address used to access the site, password recovery and other useful things.
 message.email = Your current address
+message.rate = Your mark
 
 menu.home=Home
 menu.registration=Registration
