--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -109,6 +109,7 @@ message.confirm.registration=Спасибо что присоединились 
 message.restore.pass = Измените пароль, перейдя по следующей ссылке: 
 message.chEmail = На этой странице можно сменить email адрес, который используется для входа на сайт, восстановления пароля и прочих полезных вещей. 
 message.email = Текущий адрес
+message.rate = Ваша оценка
 
 menu.home=Главная
 menu.registration=Регистрация
