--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -149,6 +149,7 @@ required.cellphone.person = Cell phone number is required!
 required.issueDate = Please, choose issue date!
 notmatch.password = Password and Confirm password is not match!
 notmatch.password.newPassword = Password and Confirm password is not match!
+toshort.password.newPassword = Your new password is to short it must contain at least 6 symbols
 NotEmpty.registration.email=Email is required field!
 Email.registration.email=Not a well-formed email address!
 Size.registration.password=Password size must be between 4 and 20!
