--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -86,6 +86,7 @@ title.bookinuse=Book in use
 title.books=Books
 
 
+message.message = Message
 message.error=ERROR!
 message.delete=Are you sure you want to delete :
 message.return=Return book?
@@ -173,7 +174,7 @@ search.showall=show all
 genre.all=All
 search.advanced=Advanced search
 wrong.password = You enter wrong password.
-password.success = You password updated succesfully.
+password.success = You password updated successfully.
 typeMismatch.book.year = Wrong input.
 typeMismatch.book.pages = Wrong input.
 
@@ -181,3 +182,18 @@ sort.froma = from A to Z
 sort.fromz = from Z to A
 sort.fromg = from greater
 sort.froml = from less
+
+error.occurred = Error has occurred. Please try again.
+changed.Email = Check your new email and confirm your new e-mail address.Otherwise you may continue use this site with old e-mail.
+delete.wish = successfully deleted from wish list
+ordered = already in your orders!
+inuse = is now in your hands.
+rate = Rate
+anotherDate = Try to choose another date or time
+updateissue = Issue date updated successfully
+updateAccount = Account successfully updated.
+couldnotOrder = Sorry for the inconvenience, but you can't this take book at this time on this term. Try to choose date or term.
+tryAgainAfter = Or repeat attempt after
+choose.term = Choose term (in days):
+day = day
+days = days
