--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -78,7 +78,7 @@ title.reg=Страница регистрации
 title.bookinuse=Пользователи книги
 title.books=Книги
 
-
+message.message = Сообщение
 message.error=ОШИБКА!
 message.delete=Вы действительно желаете удалить :
 message.return=Вернуть книгу?
@@ -131,15 +131,20 @@ pass.confirm = Подтвердите новый пароль
 
 
 required.password = Пароль обязательное поле!
+required.password.password.password = Пароль обязательное поле!
 required.confirmPassword = Подтвердите пароль!
+required.confirmPassword.password.confirmPassword = Подтвердите пароль!
 required.newPassword = Введите новый пароль!
+required.newPassword.password.newPassword = Введите новый пароль!
 required.name = Вы забыли указать своё имя!
+required.name.person = Вы забыли указать своё имя!
 required.surname = Вы забыли указать свою фамилию!
-required.cellphone = Введите свой номер мобильного телефона
+required.surname.person = Вы забыли указать свою фамилию!
+required.cellphone.person = Введите свой номер мобильного телефона
 required.issueDate = Выберите, пожалуйста, дату выдачи!
 notmatch.password = Пароли не совпадают!
 notmatch.password.newPassword = Пароли не совпадают!
-toshort.password.newPassword = Ваш новый пароль слишком короткий, он должен содержать минимум 6 символов
+toshort.password.newPassword = Ваш новый пароль слишком короткий, он должен содержать минимум 4 символов
 NotEmpty.registration.email=Вы не ввели Email адресс!
 Email.registration.email=Неверный формат електронной почты!
 NotEmpty.person.email=Вы не ввели Email адресс!
@@ -171,3 +176,18 @@ sort.froma = от А до Я
 sort.fromz = от Я до А
 sort.fromg = от большего
 sort.froml = от меньшего
+
+error.occurred = Произошла ошибка. Попробуйте еще раз
+changed.Email = Проверьте Ваш e-mail, и подтвердите смену електронного адреса.
+delete.wish = успешно удалена из вашего списка желанных книг
+ordered = уже Вами заказана!
+inuse = у Вас на руках.
+rate = Оценить
+anotherDate = Попробуйте выбрать другую дату или время
+updateissue = Дата выдачи успешно обновлена
+updateAccount = Аккаунт обновлен.
+couldnotOrder = Извините за неудобства, но эта книга не можеть быть выдана указанного числа на указанный срок.
+tryAgainAfter = Повторите попытку после  
+choose.term = Выберите срок (дней):
+day = день
+days = дней
