--- a/src/main/resources/messages_uk.properties
+++ b/src/main/resources/messages_uk.properties
@@ -80,6 +80,7 @@ title.bookinuse=Користувачі книги
 title.books=Книги
 
 
+message.message = Повідомлення
 message.error=ПОМИЛКА!
 message.delete=Ви дійсно бажаєте видалити :
 message.return=Повернути книгу?
@@ -130,15 +131,20 @@ pass.new= Введіть новий пароль
 pass.confirm = Підтвердьте новий пароль
 
 required.password = Пароль обов'язкове поле!
+required.password.password.password = Пароль обов'язкове поле!
 required.confirmPassword = Підтвердіть пароль!
+required.confirmPassword.password.confirmPassword = Підтвердіть пароль!
 required.newPassword = Введіть новий пароль!
+required.newPassword.password.newPassword = Введіть новий пароль!
 required.name = Вкажіть своє ім'я!
+required.name.person = Вкажіть своє ім'я!
 required.surname = Вкажіть своє прізвище!
-required.cellphone = Введіть свій номер мобільного телефону!
+required.surname.person = Вкажіть своє прізвище!
+required.cellphone.person = Введіть свій номер мобільного телефону!
 required.issueDate = Будь-ласка, виберіть дату видачі!
 notmatch.password = Паролі не співпадають!
 notmatch.password.newPassword = Паролі не співпадають!
-toshort.password.newPassword = Ваш новий пароль занадто короткий, мінімальна довжина - 6 символів
+toshort.password.newPassword = Ваш новий пароль занадто короткий, мінімальна довжина - 4 символів
 NotEmpty.registration.email=Email є обов'язковим для заповнення!
 NotEmpty.person.email=Email є обов'язковим для заповнення!
 Email.registration.email=Невірний формат електронної пошти!
@@ -170,3 +176,18 @@ sort.froma = від А до Я
 sort.fromz = від Я до А
 sort.fromg = від більшого
 sort.froml = від меншого
+
+error.occurred = Трапилась помилка. Будь-ласка спробуйте ще раз.
+changed.Email = Перевірте Вашу нову пошту та підтвердіть нову електронну адресу. 
+delete.wish = успішно видалена з Вашого списку бажаних книг
+ordered = вже Вами замовлена
+inuse = у Вас на руках.
+rate = Оцінити
+anotherDate = Спробуйте вибрати інакшу дату або час
+updateissue = Дата видачі успішно оновлена
+updateAccount = Аккаунт нонвлено.
+couldnotOrder = Вибачте за тимчасову незручність, на вказаний термін і дату книга не може бути видана. Спробуйте змінити дату або термін.
+tryAgainAfter = Або повторіть спробу після
+choose.term = Виберіть срок (днів):
+day = день
+days = днів
