--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -159,6 +159,8 @@ Min.book.year=Год должен быть не менее 1800
 Min.book.pages=Книга должна иметь хотя б 1 страницу
 Min.book.available=Количество книг не может быть менее 0
 Min.book.count=Количество книг не может быть менее 0
+Min.book.bookcase=Номер шафы не может быть менее 0
+Min.book.shelf=Номер полки не может быть менее 0
 server.error=О нет! Возникла непредвиденная ошибка!
 NotEmpty.order.issueDate = Введите дату выдачи!
 date.expired = Дата выдачи не может быть меньше текущей
@@ -171,6 +173,11 @@ wrong.password = Вы ввели неверный пароль. Попробуй
 password.success = Процесс смены пароля прошел успешно.
 typeMismatch.book.year = Некорректно заполнено поле.
 typeMismatch.book.pages = Некорректно заполнено поле.
+typeMismatch.book.available = Некорректно заполнено поле.
+typeMismatch.book.bookcase = Некорректно заполнено поле.
+typeMismatch.book.shelf = Некорректно заполнено поле.
+typeMismatch.book.count = Некорректно заполнено поле.
+typeMismatch.book.term = Некорректно заполнено поле.
 
 sort.froma = от А до Я
 sort.fromz = от Я до А
