--- a/src/main/resources/messages_uk.properties
+++ b/src/main/resources/messages_uk.properties
@@ -159,6 +159,8 @@ Min.book.year=Рік повинен бути не меншим 1800
 Min.book.pages=Книжка повинна мати хоча б 1 сторінку
 Min.book.available=Кількість книжок не може бути від'ємною
 Min.book.count=Кількість книжок не може бути від'ємною
+Min.book.bookcase=Номер шафи не може бути менше 0
+Min.book.shelf=Номер полиці не може бути менше 0
 server.error=О ні! Виникла непередбачувана помилка!
 NotEmpty.order.issueDate = Виберіть дату видачі!
 date.expired = Дата видачі не може бути менше поточної
@@ -171,6 +173,11 @@ wrong.password = Ви ввели невірний пароль. Спробуйт
 password.success = Процес зміни пароля успішно завершений.
 typeMismatch.book.year = Некоректно заповнено поле.
 typeMismatch.book.pages = Некоректно заповнено поле.
+typeMismatch.book.available = Некоректно заповнено поле.
+typeMismatch.book.bookcase = Некоректно заповнено поле.
+typeMismatch.book.shelf = Некоректно заповнено поле.
+typeMismatch.book.count = Некоректно заповнено поле.
+typeMismatch.book.term = Некоректно заповнено поле.
 
 sort.froma = від А до Я
 sort.fromz = від Я до А
