--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -88,7 +88,7 @@ title.books=Books
 
 message.message = Message
 message.error=ERROR!
-message.delete=Are you sure you want to delete :
+message.delete=Are you sure you want to delete?
 message.return=Return book?
 message.issue=Issue book?
 message.book=Book: 
