--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -197,3 +197,4 @@ tryAgainAfter = Or repeat attempt after
 choose.term = Choose term (in days):
 day = day
 days = days
+orderSuccess = Order created successfully
