--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -191,3 +191,4 @@ tryAgainAfter = Повторите попытку после
 choose.term = Выберите срок (дней):
 day = день
 days = дней
+orderSuccess = Ваш заказ принят
