--- a/src/main/resources/messages_uk.properties
+++ b/src/main/resources/messages_uk.properties
@@ -191,3 +191,4 @@ tryAgainAfter = Або повторіть спробу після
 choose.term = Виберіть срок (днів):
 day = день
 days = днів
+orderSuccess = Ваше замовлення прийнято
