--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -198,3 +198,8 @@ choose.term = Choose term (in days):
 day = day
 days = days
 orderSuccess = Order created successfully
+votes = Votes
+wishlistAdded = successfully added in your wish list
+has = You already have
+inwish = in your wish list
+more = More
