--- a/src/main/resources/messages_uk.properties
+++ b/src/main/resources/messages_uk.properties
@@ -192,3 +192,8 @@ choose.term = Виберіть срок (днів):
 day = день
 days = днів
 orderSuccess = Ваше замовлення прийнято
+votes = Голосів
+wishlistAdded = додана у ваш список бажаних книг
+has = Книга
+inwish = вже є у Вашому списку бажаних книг
+more = Читати більше
