--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -192,3 +192,8 @@ choose.term = Выберите срок (дней):
 day = день
 days = дней
 orderSuccess = Ваш заказ принят
+votes = Голосов
+wishlistAdded = добавлена в Ваш список желаний
+has = Книга
+inwish = уже существует в Вашем списке желаний
+more = Читать больше
