Fixes with remove books. Unit tests

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -154,6 +154,7 @@ toshort.password.newPassword = Your new password is to short it must contain at 
 NotEmpty.registration.email=Email is required field!
 Email.registration.email=Not a well-formed email address!
 Size.registration.password=Password size must be between 4 and 20!
+exist.email=This email address is already exist!
 exist.email.person=This email address is already exist!
 exist.email.person.email=This email address is already exist!
 key.notfound=Your request is not found!
