--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -210,3 +210,4 @@ wishlistAdded = successfully added in your wish list
 has = You already have
 inwish = in your wish list
 more = More
+message.change.email = You have change your e-mail address on account in J Library. Please confirm your new email by clicking next link:
