--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -204,3 +204,4 @@ wishlistAdded = добавлена в Ваш список желаний
 has = Книга
 inwish = уже существует в Вашем списке желаний
 more = Читать больше
+message.change.email = С Вашего аккаунта J Library был запрос на замену эл. почты. Пожалуйста подтвердите Ваш новый адрес, перейдя по ссылке:
