--- a/src/main/resources/messages_uk.properties
+++ b/src/main/resources/messages_uk.properties
@@ -204,3 +204,4 @@ wishlistAdded = додана у ваш список бажаних книг
 has = Книга
 inwish = вже є у Вашому списку бажаних книг
 more = Читати більше
+message.change.email = З Вашого аккаунту J Library надійшов запит на заміну ел. пошти. Будь-ласка підтвердіть Вашу нову адресу, слідуючи за посиданням:
