--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -47,6 +47,7 @@ book.deletebook=Delete book
 book.addedit=Add/Edit book
 book.order=Order date
 book.count=Count
+book.count.avail=Avail/Count
 book.available=Available
 book.notavailable=Not available
 book.rating=Rating
