--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -47,6 +47,7 @@ book.deletebook=Удалить книгу
 book.addedit=Додать/Редактировать книгу
 book.order=Дата заказа
 book.count=Количество
+book.count.avail=Нал./Всего
 book.available=В наличии
 book.notavailable=Нет в наличии
 book.rating=Рейтинг
