--- a/src/main/resources/messages_uk.properties
+++ b/src/main/resources/messages_uk.properties
@@ -47,6 +47,7 @@ book.deletebook=Видалити книгу
 book.addedit=Додати/Редагувати книгу
 book.order=Дата замовлення
 book.count=Кількість
+book.count.avail=Наявн./Всього
 book.available=В наявності
 book.notavailable=Немає в наявності
 book.rating=Рейтинг
